Rediseño de la Interfaz, arreglos bugs de crear/editar equipos, añadidos logs, añadido foto de perfil, control de sesiones, y mas... (creo) arreglo bugs con las acciones del admin en equipos de los demas arreglo la lista de fondos de equipos añade sistema de fotos de perfil control de sesiones añadida funcion de borrar logs añadido el tema dinamico segun los ajustes de cada dispositivo (si esta activado o desactivado el modo oscuro) añadido ventanas de confirmación para inicio de sesion con sesion ya iniciada y un sistema de cierre de sesión por sesion más antigua si entran mas de las sesiones permitidas (con el campo online) y mensajes de error en la ventana de inicio de sesión creo que no me dejo nada...

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Pokemonv" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Pokemonv" parent="android:Theme.Material.NoActionBar" />
+
+    <!-- Theme required for CanHub/Android-Image-Cropper Activity to show the Crop button -->
+    <style name="Theme.AppCropper" parent="Theme.AppCompat" />
 </resources>
